--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -466,6 +466,9 @@
   <string name="Megaphones_introducing_reactions">Introducerer Reaktioner </string>
   <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Tap og hold på enhver besked for hurtigt at vise hvordan du føler</string>
   <string name="Megaphones_remind_me_later">Påmind mig senere</string>
+  <string name="Megaphones_verify_your_signal_pin">Verificer din Signal PIN</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">Vi vil indimellem bede dig om at verificere din PIN, så du ikke glemmer den</string>
+  <string name="Megaphones_verify_pin">Verificer PIN</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal opkald i gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Foretager Signalopkald</string>
@@ -666,6 +669,11 @@ nummer (%s) er ugyldigt</string>
   <string name="SharedContactView_invite_to_signal">Invitér til Signal</string>
   <string name="SharedContactView_message">Signalbesked</string>
   <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">Du bliver mindet om det senere</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">Du vil blive mindet om det igen i morgen</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">Du vil blive mindet om det igen om nogle dage</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">Du bliver mindet om det igen om en uge</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">Du bliver mindet om det igen om nogle uger</string>
   <!--Slide-->
   <string name="Slide_image">Billede</string>
   <string name="Slide_sticker">Klistermærke</string>
@@ -1436,6 +1444,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--CreateKbsPinFragment-->
   <string name="CreateKbsPinFragment__create_a_new_pin">Opret en ny PIN</string>
   <string name="CreateKbsPinFragment__create_your_pin">Opret din PIN</string>
+  <string name="CreateKbsPinFragment__pins_add_extra_security_to_your_account">PINs tilføjer et ekstra lag af beskyttelse til din konto, og kan ikke gendannes. Du skal bruge din PIN for at registrere til Signal igen</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PIN´s passer ikke. Prøv igen</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Bekræft din PIN</string>
@@ -1554,7 +1563,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Skift</string>
   <string name="preferences_app_protection__create">Opret</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Din PIN tilføjer et ekstra lag af sikkerhed og laver en backup af din konto. Du vil blive spurgt om den når du registrerer dit nummer ved Signal. Hvis du glemmer din PIN, bliver du låst ude af din konto i 7 dage</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Din PIN tilføjer et ekstra lag af sikkerhed og laver en backup af din konto. Du vil blive spurgt om den når du registrerer dit nummer ved Signal. Hvis du glemmer din PIN, bliver du låst ude af din konto i 7 dage</string> -->
   <string name="AppProtectionPreferenceFragment_none">Ingen</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Verifikationskode er ikke den samme, som den kode du netop har modtaget på SMS. Indtast venligst koden du tidligere har indtastet i applikationen</string>
   <string name="registration_activity__registration_lock_pin">Registreringskode</string>
