--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -1594,7 +1594,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Ŝanĝi</string>
   <string name="preferences_app_protection__create">Krei</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Via PIN aldonas plian tavolon de sekurigo ĉe via konto. Oni petos ĝin al vi, kiam vi registros vian telefonnumeron ĉe Signal. Se vi forgesas vian PIN, vi ne plu povos aliri vian konton dum 7 tagoj.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Via PIN aldonas plian tavolon de sekurigo ĉe via konto. Oni petos ĝin al vi, kiam vi registros vian telefonnumeron ĉe Signal. Se vi forgesas vian PIN, vi ne plu povos aliri vian konton dum 7 tagoj.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Neniu</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">La persona identiga numero de bloko de registriĝo ne estas la sama kodo kiel la SMS-kontrolkodo, kiun vi ĵus ricevis. Bv. entajpi la personan identigan numeron, kiun vi antaŭe agordis en la aplikaĵo.</string>
   <string name="registration_activity__registration_lock_pin">PIN de bloko de registriĝo</string>
