--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -106,6 +106,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Non se atopou ningún navegador web.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Xa está en curso unha chamada.</string>
+  <string name="CommunicationActions_start_video_call">Iniciar videochamada?</string>
+  <string name="CommunicationActions_start_voice_call">Iniciar chamada de voz?</string>
   <string name="CommunicationActions_cancel">Cancelar</string>
   <string name="CommunicationActions_call">Chamar</string>
   <!--ConfirmIdentityDialog-->
@@ -304,6 +306,7 @@
   <string name="DeviceListItem_last_active_s">Última actividade %s</string>
   <string name="DeviceListItem_today">Hoxe</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Ficheiro sen nome</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizar cando falte Servizos Play.</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Este dispositivo non é compatible con Servizos Play. Toca para desactivar as optimizacións da batería do sistema que evitan que Signal recupere mensaxes mentres está inactivo.</string>
@@ -405,16 +408,19 @@
   <string name="MmsDownloader_error_reading_mms_settings">Erro ao ler os axustes do provedor sen fíos de MMS</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Ficheiros multimedia</string>
+  <string name="MediaOverviewActivity_Files">Ficheiros</string>
   <string name="MediaOverviewActivity_Audio">Audio</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Borrando</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Borrando mensaxes…</string>
   <string name="MediaOverviewActivity_Select_all">Seleccionar todo</string>
   <string name="MediaOverviewActivity_collecting_attachments">Recompilando anexos…</string>
+  <string name="MediaOverviewActivity_Sort_by">Ordenar por</string>
   <string name="MediaOverviewActivity_file">Ficheiro</string>
   <string name="MediaOverviewActivity_audio">Audio</string>
   <string name="MediaOverviewActivity_video">Vídeo</string>
   <string name="MediaOverviewActivity_image">Imaxe</string>
   <!--Megaphones-->
+  <string name="Megaphones_remind_me_later">Lembrarmo máis tarde</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada Signal en progreso</string>
   <string name="NotificationBarManager__establishing_signal_call">Establecendo chamada Signal</string>
@@ -591,6 +597,7 @@
   <string name="RegistrationActivity_call">Chamar</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">Ver fotografía</string>
+  <string name="RevealableMessageView_view_video">Ver vídeo</string>
   <string name="RevealableMessageView_viewed">Vista</string>
   <string name="RevealableMessageView_media">Ficheiros multimedia</string>
   <!--ScribbleActivity-->
@@ -680,8 +687,14 @@
   <string name="UnverifiedSendDialog_send_message">Enviar mensaxe?</string>
   <string name="UnverifiedSendDialog_send">Enviar</string>
   <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Nome de usuario</string>
   <string name="UsernameEditFragment_submit">Enviar</string>
   <string name="UsernameEditFragment_delete">Eliminar</string>
+  <string name="UsernameEditFragment_this_username_is_available">Este nome de usuario está dispoñible.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Os nomes de usuario só poden incluír caracteres do a-Z, 0-9 e guións baixos.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Os nomes de usuario non poden comezar por un número.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Nome de usuario non válido.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Os nomes de usuario deben ter entre %1$d e %2$d caracteres.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">O teu contacto ten unha versión antiga de Signal. Pídelle que a actualice antes de verificar o número de seguranza.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">O teu contacto ten unha versión recente de Signal cun formato de código QR incompatible. Actualízate para poder comparalo.</string>
@@ -766,6 +779,7 @@
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nova mensaxe</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Reproducir vídeo</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d elemento</item>
@@ -831,6 +845,7 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal require permiso para poder mostrar os teus contactos, pero este foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Contactos\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Erro ao recuperar os contactos; comproba a túa conexión á rede</string>
+  <string name="ContactSelectionListFragment_username_not_found">Nome de usuario non atopado</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Ningún contacto bloqueado</string>
   <!--contact_selection_list_fragment-->
@@ -989,6 +1004,8 @@
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Para enviar ficheiros multimedia e mensaxes a grupos, toca Aceptar e completa a configuración solicitada. Os axustes das MMS do teu provedor xeralmente pódense atopar buscando polo seu APN. Só necesitas facelo unha vez.</string>
   <!--profile_create_activity-->
   <string name="CreateProfileActivity_next">Seguinte</string>
+  <string name="CreateProfileActivity__username">Nome de usuario</string>
+  <string name="CreateProfileActivity__create_a_username">Crear nome de usuario</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Ficheiros multimedia compartidos</string>
   <!--recipient_preferences-->
@@ -1170,6 +1187,9 @@
   <string name="preferences_chats__when_roaming">En itinerancia</string>
   <string name="preferences_chats__media_auto_download">Descarga automática multimedia</string>
   <string name="preferences_chats__message_trimming">Recorte das mensaxes</string>
+  <string name="preferences_storage__photos">Fotografías</string>
+  <string name="preferences_storage__videos">Vídeos</string>
+  <string name="preferences_storage__files">Ficheiros</string>
   <string name="preferences_storage__audio">Audio</string>
   <string name="preferences_advanced__use_system_emoji">Utilizar sistema emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Desactiva o soporte emoji integrado en Signal</string>
@@ -1323,17 +1343,22 @@
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirma o teu PIN.</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__learn_more">Saber máis</string>
+  <string name="KbsSplashFragment__update_pin">Actualizar PIN</string>
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__skip">Omitir</string>
   <string name="KbsReminderDialog__submit">Enviar</string>
   <string name="KbsReminderDialog__forgot_pin">Esqueciches o PIN?</string>
   <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__account_locked">Conta bloqueada</string>
   <string name="AccountLockedFragment__next">Seguinte</string>
   <string name="AccountLockedFragment__learn_more">Saber máis</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__next">Seguinte</string>
   <string name="RegistrationLockFragment__forgot_pin">Esqueciches o PIN?</string>
+  <string name="RegistrationLockFragment__incorrect_pin">PIN incorrecto</string>
   <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_pin">Crear PIN</string>
+  <string name="KbsMegaphone__update_pin">Actualizar PIN</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icona do tráfico</string>
   <string name="ConversationListFragment_loading">Cargando…</string>
@@ -1392,6 +1417,8 @@
   <string name="preferences_app_protection__screen_lock">Bloqueo da pantalla</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Bloquea o acceso a Signal co bloqueo de pantalla de Android ou coa impresión dixital</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Tempo de inactividade para o bloqueo de pantalla</string>
+  <string name="preferences_app_protection__pin">PIN</string>
+  <string name="preferences_app_protection__change">Cambiar</string>
   <string name="preferences_app_protection__create">Crear</string>
   <string name="AppProtectionPreferenceFragment_none">Ningunha</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">O PIN do bloqueo de rexistro non é o mesmo que o código de verificación que recibiches por SMS. Insire o PIN con que configuraches a aplicación.</string>
@@ -1433,5 +1460,13 @@
   <string name="MessageRequestBottomView_accept">Aceptar</string>
   <string name="MessageRequestBottomView_delete">Eliminar</string>
   <string name="MessageRequestBottomView_block">Bloquear</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membro de %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membro de %1$s e %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membro de %1$s, %2$s e %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d membros</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d máis</item>
+    <item quantity="other">%d máis</item>
+  </plurals>
   <!--EOF-->
 </resources>
