--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1593,7 +1593,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Változtatás</string>
   <string name="preferences_app_protection__create">Létrehozás</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">A PIN kód növeli fiókod biztonságát. Minden olyan esetben meg kell adnod, amikor telefonszámodat a Signal-ra beregisztrálod. Amennyiben elfelejted PIN kódodat, 7 napra ki leszel tiltva fiókodból.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">A PIN kód növeli fiókod biztonságát. Minden olyan esetben meg kell adnod, amikor telefonszámodat a Signal-ra beregisztrálod. Amennyiben elfelejted PIN kódodat, 7 napra ki leszel tiltva fiókodból.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Egyik sem</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">A regisztrációs zár PIN nem ugyanaz, mint az SMS ellenőrző kód, amit az imént kaptál. Kérlek add meg a PIN kódot, amelyet korábban az alkalmazásban állítottál be!</string>
   <string name="registration_activity__registration_lock_pin">Regisztrációs zár PIN</string>
