--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1555,7 +1555,7 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Ubah</string>
   <string name="preferences_app_protection__create">Buat</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN Anda menambahkan lapisan ekstra keamanan dan mencadangkan akun Anda. Anda akan dimintai PIN tersebut saat Anda mendaftarkan nomor telepon Anda di Signal. Jika lupa PIN, akun Anda akan terkunci selama 7 hari.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN Anda menambahkan lapisan ekstra keamanan dan mencadangkan akun Anda. Anda akan dimintai PIN tersebut saat Anda mendaftarkan nomor telepon Anda di Signal. Jika lupa PIN, akun Anda akan terkunci selama 7 hari.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Kosong</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN Kunci Pendaftaran berbeda dengan SMS kode verifikasi yang baru Anda terima. Harap masukkan konfigurasi PIN yang sebelumnya telah Anda buat. </string>
   <string name="registration_activity__registration_lock_pin">PIN Kunci Pendaftaran</string>
