--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1544,7 +1544,7 @@
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">変更</string>
   <string name="preferences_app_protection__create">作成</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN はセキュリティを強化し、アカウントを保護します。Signal に電話番号を登録する際に要求され、忘れた場合アカウントは 7 日間ロックされます。</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN はセキュリティを強化し、アカウントを保護します。Signal に電話番号を登録する際に要求され、忘れた場合アカウントは 7 日間ロックされます。</string> -->
   <string name="AppProtectionPreferenceFragment_none">なし</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">登録ロック PIN は SMS で先程送信された認証コードと異なります。以前 Signal で設定した PIN を入力してください。</string>
   <string name="registration_activity__registration_lock_pin">登録ロック PIN</string>
