--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -1495,7 +1495,7 @@
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Gantos</string>
   <string name="preferences_app_protection__create">Damel</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN sampeyan mewahi lapisan keamanan ekstra lan ndamelaken serep kangge akun kasebut. PIN niki bakal ditedhakaken kala sampeyan ndaftaraken nomer telepon sampeyan kangge Signal. Menawi sampeyan kesupen PIN kasebut, akun sampeyan bakal dipunkunci ngantos 7 dinten.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN sampeyan mewahi lapisan keamanan ekstra lan ndamelaken serep kangge akun kasebut. PIN niki bakal ditedhakaken kala sampeyan ndaftaraken nomer telepon sampeyan kangge Signal. Menawi sampeyan kesupen PIN kasebut, akun sampeyan bakal dipunkunci ngantos 7 dinten.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Mboten enten</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN Kunci Pendaftaran mboten sami kaliyan kode verifikasi SMS ingkang nembe sampeyan tampi. Lebetaken PIN ingkang sampeyan tetapaken ing aplikasi saderengipun.</string>
   <string name="registration_activity__registration_lock_pin">PIN Kunci Pendaftaran</string>
