--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -40,6 +40,7 @@
   <string name="ApplicationPreferencesActivity_Off">បិទ</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">ចាក់សោរអេក្រង់ %1$s, ចាក់សោេរចុះឈ្មោះ %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">ចាក់សោអេក្រង់ %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">ប្រធានបទ %1$s, ភាសា %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -57,6 +58,8 @@
   <string name="AttachmentKeyboard_file">ឯកសារ</string>
   <string name="AttachmentKeyboard_contact">ទំនាក់ទំនង</string>
   <string name="AttachmentKeyboard_location">ទីតាំង</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal ត្រូវការការអនុញ្ញាតដើម្បីបង្ហាញរូបភាពនិងវីដេអូរបស់អ្នក។</string>
+  <string name="AttachmentKeyboard_give_access">ផ្តល់ការអនុញ្ញាត</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">មិនអាចស្វែងរកកម្មវិធីដើម្បីជ្រើសរើសព័ត៌មាន</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal ទាមទារសិទ្ធិប្រើប្រាស់អង្គរក្សាទុកដើម្បីភ្ជាប់រូបថត វីដេអូ ឬសំឡេង ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅការកំណត់របស់ប្រព័ន្ធ ជ្រើសរើស \"អនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\" ។</string>
@@ -439,6 +442,12 @@
   <string name="MediaOverviewActivity_sent_by_s_to_s">បានផ្ញើដោយ %1$s ទៅ %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">បានផ្ញើដោយអ្នកទៅ %1$s</string>
   <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">ការណែនាំ ប្រតិកម្ម</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">ចុច និងសង្កត់សារណាមួយដើម្បីចែករំលែករហ័សពីអារម្មណ៍របស់អ្នក។</string>
+  <string name="Megaphones_remind_me_later">រំលឹកខ្ញុំពេលក្រោយ</string>
+  <string name="Megaphones_verify_your_signal_pin">ផ្ទៀងផ្ទាត់លេខPIN Signal</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">យើងនឹងសាកសួរអ្នកម្តងម្កាល ដើម្បីផ្ទៀងផ្ទាត់លេខកូដ PIN ថាអ្នកពិតជាចងចាំវា។</string>
+  <string name="Megaphones_verify_pin">ផ្ទៀងផ្ទាត់លេខ PIN</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">ការហៅចេញSignal កំពុងដំណើរការ</string>
   <string name="NotificationBarManager__establishing_signal_call">ការហៅចេញ តាមSignal</string>
@@ -542,7 +551,9 @@
   <string name="RatingManager_later">ពេលក្រោយ</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">ចុម កម្មវិធី Play Store មានសម្រាប់ដំឡើងក្នុងឧបករណ៍របស់អ្នកទេ។</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">ទាំងអស់ %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">បិទលេខទំនាក់ទំនងនេះ?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">អ្នកនឹងលែងទទួលសារ និងការហៅចូលពីលេខទំនាក់ទំនងនេះទៀតហើយ។</string>
@@ -632,6 +643,11 @@
   <string name="SharedContactView_invite_to_signal">អញ្ជើញចូលប្រើSignal</string>
   <string name="SharedContactView_message">សារ Signal </string>
   <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">យើងនឹងរំលឹកអ្នកម្តងទៀតពេលក្រោយ។</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">យើងនឹងរំលឹកអ្នកម្តងទៀតថ្ងៃស្អែក។</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">យើងនឹងរំលឹកអ្នកម្តងទៀតប៉ុន្មានថ្ងៃទៀត។</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">យើងនឹងរំលឹកអ្នកម្តងទៀតសប្តាហ៍ក្រោយ។</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">យើងនឹងរំលឹកអ្នកម្តងទៀត២សប្តាហ៍ក្រោយ។</string>
   <!--Slide-->
   <string name="Slide_image">រូបភាព</string>
   <string name="Slide_sticker">ស្ទីកគ័រ</string>
@@ -777,6 +793,14 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">បើក Signal ដើម្បីឆែកមើលការជូនដំណឹងថ្មីៗ។</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">ទំនាក់ទំនង</string>
+  <string name="MessageNotifier_reacted_s_to_s">ប្រតិកម្ម %1$s ទៅ៖ \"%2$s\"។</string>
+  <string name="MessageNotifier_reacted_s_to_your_video">ប្រតិកម្ម %1$s ទៅវីដេអូអ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_image">ប្រតិកម្ម %1$s ទៅរូបភាពអ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_file">ប្រតិកម្ម %1$s ទៅឯកសារអ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_audio">ប្រតិកម្ម %1$s ទៅសំឡេងអ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_photo">ប្រតិកម្ម %1$s ទៅរូបភាពមើលម្តងរបស់អ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_view_once_video">ប្រតិកម្ម %1$s ទៅវីដេអូមើលម្តងរបស់អ្នក។</string>
+  <string name="MessageNotifier_reacted_s_to_your_sticker">ប្រតិកម្ម %1$s ទៅស្ទីកគ័រអ្នក។</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">លំនាំដើម</string>
   <string name="NotificationChannel_calls">ការហៅ</string>
@@ -1025,6 +1049,8 @@
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages"> Signal ទាមទារការកំណត់MMS ដើម្បីបញ្ជូនព័ត៌មាន និងសារជាក្រុម តាមរយៈប្រតិបត្តិករបណ្តាញរបស់អ្នក។ ឧបករណ៍អ្នកមិនអាចបង្ហាញព័ត៌មានបាន ដោយសារឧបករណ៍អ្នកត្រូវបានជាប់សោ និងមិនអនុញ្ញាតឲ្យកែប្រែបាន។ </string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">ដើម្បីផ្ញើសារព័ត៌មាន និងសារជាក្រុម ចុច \'ព្រម\' និងបញ្ចប់ការកំណត់ស្នើសុំ។ ការកំណត់ MMS ដោយប្រតិបត្តិករ ជាទូទៅត្រូវបានកំណត់ដោយការស្វែងរក \'APN របស់ប្រតិបត្តិករអ្នក\'។ អ្នកនឹងត្រូវធ្វើដូចនេះតែម្តងទេ។</string>
   <!--profile_create_activity-->
+  <string name="CreateProfileActivity_first_name_required">ឈ្មោះ (ចាំបាច់)</string>
+  <string name="CreateProfileActivity_last_name_optional">ត្រកូល (ជម្រើស)</string>
   <string name="CreateProfileActivity_next">បន្ទាប់</string>
   <string name="CreateProfileActivity__username">ឈ្មោះអ្នកប្រើប្រាស់</string>
   <string name="CreateProfileActivity__create_a_username">បង្កើតឈ្មោះអ្នកប្រើប្រាស់</string>
@@ -1375,34 +1401,87 @@
   <!--Edit KBS Pin-->
   <!--BaseKbsPinFragment-->
   <string name="BaseKbsPinFragment__next">បន្ទាប់</string>
+  <string name="BaseKbsPinFragment__create_alphanumeric_pin">បង្កើតអក្សរក្រមលេខ PIN</string>
+  <string name="BaseKbsPinFragment__create_numeric_pin">បង្កើតលេខ PIN</string>
   <!--CreateKbsPinFragment-->
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_characters">
+    <item quantity="other">PIN ត្រូវមានយ៉ាងហោចណាស់ %1$d តួ</item>
+  </plurals>
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_digits">
+    <item quantity="other">PIN ត្រូវមានយ៉ាងហោចណាស់ %1$d ខ្ទង់</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_a_new_pin">បង្កើតលេខ PIN ថ្មី</string>
+  <plurals name="CreateKbsPinFragment__you_can_choose_a_new_pin_because_this_device_is_registered">
+    <item quantity="other">អ្នកអាចជ្រើសរើសលេខកូដ PIN ថ្មី ដោយសារឧបករណ៍នេះបានចុះឈ្មោះហើយ។ បើអ្នកភ្លេចលេខកូដ PIN របស់អ្នក អ្នកអាចត្រូវរង់ចាំ %1$d ថ្ងៃ ដើម្បីចុះឈ្មោះម្តងទៀត។</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">បង្កើតលេខ PIN របស់អ្នក</string>
+  <string name="CreateKbsPinFragment__pins_add_extra_security_to_your_account">លេខកូដ PINs បន្ថែមសុវត្ថិភាពទៅគណនីរបស់អ្នក និងមិនអាចស្តារឡើងវិញទេ។ អ្នកត្រូវការលេខកូដ PIN ដើម្បីចុះឈ្មោះជាមួយ Signal ម្តងទៀត។</string>
   <!--ConfirmKbsPinFragment-->
+  <string name="ConfirmKbsPinFragment__pins_dont_match">PINs មិនត្រូវគ្នា។ សាកល្បងម្តងទៀត។</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">ផ្ទៀងផ្ទាត់លេខ PIN របស់អ្នក។</string>
+  <string name="ConfirmKbsPinFragment__pin_creation_failed">ការបង្កើត PIN បរាជ័យ</string>
+  <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">លេខ PIN របស់អ្នកមិនបានរក្សាទុក។ យើងនឹងណែនាំអ្នកអោយបង្កើតកូដ PIN នៅពេលក្រោយ។</string>
+  <string name="ConfirmKbsPinFragment__pin_created">PIN ត្រូវបានបង្កើត។</string>
   <string name="ConfirmKbsPinFragment__re_enter_pin">បញ្ចូលលេខ PIN ម្តងទៀត</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">កំពុងបង្កើត PIN…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">ការណែនាំ លេខPINs</string>
+  <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">លេខកូដ PINs បន្ថែមកម្រិតសុវត្ថិភាពទៅគណនីរបស់អ្នក។ បង្កើតមួយឥឡូវនេះ។</string>
   <string name="KbsSplashFragment__learn_more">ស្វែងយល់បន្ថែម</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">ចាក់សោរការចុះឈ្មោះ = លេខ PIN</string>
+  <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">ការចាក់សោរការចុះឈ្មោះរបស់អ្នក ឥឡូវត្រូវបានហៅថា លេខកូដ PIN និងវាមានមុខងារច្រើន។ ធ្វើបច្ចុប្បន្នភាពវាឥឡូវនេះ។</string>
+  <string name="KbsSplashFragment__read_more_about_pins">អានបន្ថែមអំពីលេខកូដ PINs។</string>
+  <string name="KbsSplashFragment__update_pin">បច្ចុប្បន្នភាពកូដ PIN</string>
   <string name="KbsSplashFragment__create_your_pin">បង្កើតលេខ PIN របស់អ្នក</string>
   <!--KBS Reminder Dialog-->
   <string name="KbsReminderDialog__enter_your_signal_pin">បញ្ចូលលេខ Signal PIN របស់អ្នក</string>
+  <string name="KbsReminderDialog__to_help_you_memorize_your_pin">ដើម្បីជួយអ្នកចងចាំលេខកូដ PIN របស់អ្នក យើងនឹងសាកសួរអ្នកអោយបញ្ចូលវាម្តងម្កាល។ យើងនឹងសួរតិចជាងមុន។ </string>
   <string name="KbsReminderDialog__skip">រំលង</string>
   <string name="KbsReminderDialog__submit">បញ្ជូន</string>
   <string name="KbsReminderDialog__forgot_pin">ភ្លេចលេខ PIN?</string>
+  <string name="KbsReminderDialog__incorrect_pin_try_again">លេខកូដ PIN មិនត្រឹមត្រូវ។ សាកល្បងម្តងទៀត។</string>
   <!--AccountLockedFragment-->
+  <string name="AccountLockedFragment__account_locked">គណនីត្រូវបានចាក់សោរ</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">គណនីរបស់អ្នកត្រូវបានជាប់សោរ ដើម្បីការពារឯកជនភាព និងសុវត្ថិភាព។ បន្ទាប់ពី %1$d ថ្ងៃនៃអសកម្មភាពក្នុងគណនីរបស់អ្នក អ្នកនឹងអាចចុះឈ្មោះជាមួយលេខទូរស័ព្ទនេះម្តងទៀត ដោយមិនចាំបាច់មានលេខកូដ PIN របស់អ្នកទេ។ ខ្លឹមសារទាំងអស់នឹងត្រូវលុបចោល។</string>
   <string name="AccountLockedFragment__next">បន្ទាប់</string>
   <string name="AccountLockedFragment__learn_more">ស្វែងយល់បន្ថែម</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">បញ្ចូលលេខ PIN របស់អ្នក</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">បញ្ចូលលេខ PIN ដែលអ្នកបានបង្កើតសម្រាប់ គណនីរបស់អ្នក។ នេះខុសពីលេខកូដផ្ទៀងផ្ទាត់ពីសារ SMS ។</string>
+  <string name="RegistrationLockFragment__enter_alphanumeric_pin">បញ្ចូលលេខ PIN អក្សរក្រមលេខ</string>
+  <string name="RegistrationLockFragment__enter_numeric_pin">បញ្ចូលលេខកូដ PIN</string>
   <string name="RegistrationLockFragment__next">បន្ទាប់</string>
+  <string name="RegistrationLockFragment__incorrect_pin_try_again">លេខកូដ PIN មិនត្រឹមត្រូវ។ សាកល្បងម្តងទៀត។</string>
   <string name="RegistrationLockFragment__forgot_pin">ភ្លេចលេខ PIN?</string>
   <string name="RegistrationLockFragment__incorrect_pin">លេខកូដ PIN មិនត្រឹមត្រូវ</string>
   <string name="RegistrationLockFragment__forgot_your_pin">ភ្លេចលេខ PIN របស់អ្នក?</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">ការសាកល្បងនៅសល់តិច!</string>
+  <plurals name="RegistrationLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">
+    <item quantity="other">សម្រាប់ឯកជនភាព និងសុវត្ថិភាព គ្មានវិធីដើម្បីស្តារលេខកូដ PIN របស់អ្នកទេ។ បើអ្នកមិនចាំលេខកូដ  PIN របស់អ្នក អ្នកអាចផ្ទៀងផ្ទាត់ម្តងទៀតតាមសារ SMS បន្ទាប់ពី %1$d ថ្ងៃនៃអសកម្មភាព។ ក្នុងករណីនេះ គណនីរបស់អ្នកនឹងត្រូវសំអាត និងខ្លឹមសារទាំងអស់នឹងត្រូវលុបចោល។</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__incorrect_pin_d_attempts_remaining">
+    <item quantity="other">លេខកូដ PIN មិនត្រឹមត្រូវ។ ការព្យាយាមនៅសល់ %1$d ។</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__if_you_run_out_of_attempts_your_account_will_be_locked_for_d_days">
+    <item quantity="other">បើការព្យាយាមលែងមានហើយ  គណនីរបស់អ្នកនឹងត្រូវជាប់សោររយៈពេល %1$d ថ្ងៃ។ បន្ទាប់ពី %1$d ថ្ងៃនៃអសកម្មភាព អ្នកអាចចុះឈ្មោះម្តងទៀត ដោយមិនចាំបាច់លេខកូដ PIN របស់អ្នកទេ។ គណនីរបស់អ្នក នឹងត្រូវសំអាតនិងខ្លឹមសារទាំងអស់នឹងត្រូវលុបចោល។</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__you_have_d_attempts_remaining">
+    <item quantity="other">អ្នកនៅសល់ការព្យាយាម %1$d ។</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__d_attempts_remaining">
+    <item quantity="other">ការព្យាយាមនៅសល់ %1$d ។</item>
+  </plurals>
   <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">បង្កើតលេខកូដ PIN មួយ</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">លេខកូដ PINs បង្កើតស្រទាប់សុវត្ថិភាពបន្ថែមលើគណនី Signal របស់អ្នក។</string>
+  <string name="KbsMegaphone__create_pin">បង្កើតលេខកូដ PIN</string>
   <string name="KbsMegaphone__introducing_pins">ការណែនាំ លេខPINs</string>
+  <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">ការចាក់សោរការចុះឈ្មោះរបស់អ្នក ឥឡូវត្រូវបានហៅថា លេខកូដ PIN។ ធ្វើបច្ចុប្បន្នភាពវា ចំណាយពេលប៉ុន្មានវិនាទីប៉ុណ្ណោះ។</string>
+  <string name="KbsMegaphone__update_pin">បច្ចុប្បន្នភាពកូដ PIN</string>
+  <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">យើងនឹងរំលឹកអ្នកពេលក្រោយ។ ការបង្កើតលេខកូដ PIN នឹងចាំបាច់ក្នុង %1$d ថ្ងៃ។</string>
+  <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">យើងនឹងរំលឹកអ្នកពេលក្រោយ។ ការបញ្ជាក់លេខកូដ PIN នឹងចាំបាច់ក្នុង %1$d ថ្ងៃ។</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">រូបសញ្ញាជញ្ជូន</string>
   <string name="ConversationListFragment_loading">កំពុងផ្ទុក…</string>
@@ -1427,6 +1506,8 @@
   <string name="preferences_chats__chat_backups">ការបម្រុងទុកការជជែក</string>
   <string name="preferences_chats__backup_chats_to_external_storage">បម្រុងទុកការជជែកទៅកាន់អង្គចងចាំខាងក្រៅ</string>
   <string name="preferences_chats__create_backup">បង្កើតការបម្រុងទុក</string>
+  <string name="preferences_chats__verify_backup_passphrase">ផ្ទៀងផ្ទាត់ឃ្លាសម្ងាត់បម្រុងទុក</string>
+  <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">សាកល្បងឃ្លាសម្ងាត់បម្រុងទុករបស់អ្នក និងផ្ទៀងផ្ទាត់ថាវាត្រូវគ្នា</string>
   <string name="RegistrationActivity_enter_backup_passphrase">បញ្ចូលឃ្លាសម្ងាត់បម្រុងទុក</string>
   <string name="RegistrationActivity_restore">ស្តារឡើងវិញ</string>
   <string name="RegistrationActivity_backup_failure_downgrade">មិនអាចនាំចូលឯកសារបម្រុងទុក ពី Signal ជំនាន់ថ្មី</string>
@@ -1444,7 +1525,10 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">បិទ និងលុបចោលការបម្រុងទុកខាងក្នុងទាំងអស់?</string>
   <string name="BackupDialog_delete_backups_statement">លុបការបម្រុងទុក</string>
   <string name="BackupDialog_copied_to_clipboard">បានចម្លងទៅ clipboard</string>
+  <string name="BackupDialog_enter_backup_passphrase_to_verify">បញ្ចូលឃ្លាសម្ងាត់បម្រុងទុករបស់អ្នកដើម្បីផ្ទៀងផ្ទាត់</string>
   <string name="BackupDialog_verify">ផ្ទៀងផ្ទាត់</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">អ្នកបានបញ្ចូលឃ្លាសម្ងាត់បម្រុងទុករបស់អ្នកដោយជោគជ័យ</string>
+  <string name="BackupDialog_passphrase_was_not_correct">ឃ្លាសម្ងាត់មិនត្រឹមត្រូវ</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalត្រូវការសិទ្ធិប្រើប្រាស់អង្គរក្សាទុកខាងក្រៅដើម្បីបង្កើតការស្តារឡើងវិញ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅកាន់ ការកំណត់ ជ្រើសរើស \"ការអនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\"។ </string>
   <string name="ChatsPreferenceFragment_last_backup_s">បម្រុងទុកលើលចុងក្រោយ៖ %s</string>
   <string name="ChatsPreferenceFragment_in_progress">កំពុងដំណើរការ</string>
@@ -1461,8 +1545,11 @@
   <string name="preferences_app_protection__screen_lock">ចាក់សោរអេក្រង់</string>
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">ចាក់សោរការប្រើប្រាស់ Signal ជាមួយសោរអេក្រង់ Android ឬ ក្រយៅដៃ</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">អេក្រង់ជាប់សោរ ទុកចោលហួសកំណត់ </string>
+  <string name="preferences_app_protection__signal_pin">លេខកូដ PIN Signal</string>
   <string name="preferences_app_protection__pin">លេខ PIN</string>
+  <string name="preferences_app_protection__change">ផ្លាស់ប្តូរ</string>
   <string name="preferences_app_protection__create">បង្កើត</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">លេខកូដ PIN របស់អ្នកបន្ថែមស្រទាប់សុវត្ថិភាព និងបម្រុងទុកគណនីរបស់អ្នក។ អ្នកនឹងត្រូវសួរពីវា នៅពេលអ្នកចុះឈ្មោះលេខទូរស័ព្ទរបស់អ្នកជាមួយ Signal។ បើអ្នកភ្លេចលេខកូដ PIN របស់អ្នក អ្នកនឹងត្រូវជាប់សោរគណនីរបស់អ្នករយៈពេល ៧ ថ្ងៃ។</string> -->
   <string name="AppProtectionPreferenceFragment_none">គ្មាន</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">លេខPIN សម្រាប់ចាក់សោរការចុះឈ្មោះ មិនដូចគ្នានឹងលេខកូដផ្ទៀងផ្ទាត់ទទួលពីសារSMS ។ សូមបញ្ចូលលេខកូដដែលអ្នកបានកំណត់ពីមុន ក្នុងកម្មវិធីនេះ។</string>
   <string name="registration_activity__registration_lock_pin">លេខ PIN សម្រាប់ចាក់សោការចុះឈ្មោះ</string>
@@ -1476,6 +1563,7 @@
   <string name="preferences_app_protection__registration_lock_pin">លេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះ</string>
   <string name="preferences_app_protection__registration_lock">ចាក់សោរការចុះឈ្មោះ</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">អ្នកត្រូវបញ្ចូលលេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះរបស់អ្នក</string>
+  <string name="RegistrationActivity_your_pin_has_at_least_d_digits_or_characters">លេខកូដ PIN របស់អ្នកមានយ៉ាងហោចណាស់ %d ខ្ទង់ ឬតួអក្សរ</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">លេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះមិនត្រឹមត្រូវ</string>
   <string name="RegistrationActivity_too_many_attempts">ព្យាយាមច្រើនដងពេក</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">អ្នកបានព្យាយាមបញ្ចូលលេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះខុសច្រើនដង។ សូមសាកល្បងម្តងទៀត ១ថ្ងៃបន្ទាប់។</string>
@@ -1490,6 +1578,7 @@
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">ចាក់សោរការចុះឈ្មោះ ជួយការពារលេខទូរស័ព្ទអ្នក ពីការព្យយាមបន្លំការចុះឈ្មោះ។ មុខងារនេះ អាចបិទបានគ្រប់ពេល ក្នុងការកំណត់ឯកជនភាពរបស់ Signal</string>
   <string name="RegistrationLockDialog_registration_lock">ចាក់សោរការចុះឈ្មោះ</string>
   <string name="RegistrationLockDialog_enable">បើក</string>
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">ការចាក់សោរការចុះឈ្មោះលេខកូដ PIN ត្រូវមានយ៉ាងហោចណាស់ %d ខ្ទង់។</string>
   <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">លេខ PIN ទាំងពីរដែលអ្នកបានបញ្ចូល មិនត្រូវគ្នា។</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">បញ្ហាក្នុងការភ្ជាប់ទៅសេវា</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">បិទលេខ PIN សម្រាប់ចាក់សោរការចុះឈ្មោះ?</string>
