--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -44,6 +44,7 @@
   <string name="ApplicationPreferencesActivity_Off">Izslēgts</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Ekrāna bloķēšana %1$s, Reģistrācijas bloķēšana %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Ekrāna bloķēšana %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Izskats %1$s, valoda %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -63,6 +64,8 @@
   <string name="AttachmentKeyboard_file">Fails</string>
   <string name="AttachmentKeyboard_contact">Kontakts</string>
   <string name="AttachmentKeyboard_location">Atrašanās vieta</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal ir nepieciešama atļauja rādīt jūsu fotoattēlus un videoklipus.</string>
+  <string name="AttachmentKeyboard_give_access">Piešķirt piekļuvi</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Nevar atrast aplikāciju, ar kuru iespējams izvēlēties pievienojamo mediju.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Lai pievienoto fotogrāfijas, videoierakstus un audioierakstus, Signal nepieciešama atļauja pieejai pie Glabātuves, bet tā ir liegta. Ejiet uz lietotnes iestatījumu izvēli, izvēlieties „Atļaujas“ un ieslēdziet „Glabātuve“.</string>
@@ -290,6 +293,7 @@
   <!--ConversationTitleView-->
   <string name="ConversationTitleView_verified">Pārbaudīts</string>
   <!--CreateProfileActivity-->
+  <string name="CreateProfileActivity__profile">Profils</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Kļūda iestatot profila attēlu</string>
   <string name="CreateProfileActivity_problem_setting_profile">Problēma iestatot profilu</string>
   <string name="CreateProfileActivity_profile_photo">Profila attēls</string>
@@ -355,6 +359,8 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Jūs variet ieslēgt vai izslēgt šo jebkurā laikā savos Signal iestatījumos (Privātums -&gt; Sūtīt saišu prekšskatījumus)</string>
   <string name="ExperienceUpgradeActivity_got_it">Sapratu</string>
   <string name="ExperienceUpgradeActivity_introducing_stickers">Iepazīstinām ar uzlīmēm</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Kāpēc lietot vārdus, ja var izmantot uzlīmes?</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Kāpēc lietot vārdus, ja var izmantot uzlīmes? Pieskarieties šai ikonai uz tastatūras:</string>
   <string name="ExperienceUpgradeActivity_lets_go">Aiziet</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Ziņas ielāde…</string>
@@ -396,6 +402,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Dalīties</string>
   <string name="InviteActivity_choose_contacts">Izvēlēties kontaktus</string>
+  <string name="InviteActivity_share_with_contacts">Dalīties ar kontaktpersonām</string>
+  <string name="InviteActivity_choose_how_to_share">Izvēlieties, kā koplietot</string>
   <string name="InviteActivity_cancel">Atcelt</string>
   <string name="InviteActivity_sending">Sūta…</string>
   <string name="InviteActivity_heart_content_description">Sirds</string>
@@ -433,15 +441,53 @@
   <string name="MediaOverviewActivity_Files">Faili</string>
   <string name="MediaOverviewActivity_Audio">Audio</string>
   <string name="MediaOverviewActivity_All">Visi</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="zero">Vai izdzēst atlasīto?</item>
+    <item quantity="one">Vai izdzēst atlasīto?</item>
+    <item quantity="other">Vai izdzēst atlasītos?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="zero"> Atlasītais fails %1$d tiks neatgriezeniski izdzēsts. Tiks izdzēsts arī ar šo vienumu saistītais ziņojuma teksts.</item>
+    <item quantity="one">Atlasītais fails tiks neatgriezeniski izdzēsts. Tiks izdzēsts arī ar šo vienumu saistītais ziņojuma teksts.</item>
+    <item quantity="other">Tiks neatgriezeniski izdzēsti visi atlasītie %1$d faili. Tiks izdzēsts arī ar šiem vienumiem saistītais ziņojuma teksts.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Dzēš</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dzēš ziņas…</string>
   <string name="MediaOverviewActivity_Select_all">Izvēlēties visu</string>
   <string name="MediaOverviewActivity_collecting_attachments">Apkopo pielikumus…</string>
+  <string name="MediaOverviewActivity_Sort_by">Kārtot pēc</string>
+  <string name="MediaOverviewActivity_Newest">Jaunākais</string>
+  <string name="MediaOverviewActivity_Oldest">Vecākais</string>
+  <string name="MediaOverviewActivity_Storage_used">Izmantotā krātuve</string>
+  <string name="MediaOverviewActivity_All_storage_use">Visi krātuves lietojumi</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Režģa skats</string>
+  <string name="MediaOverviewActivity_List_view_description">Saraksta skats</string>
+  <string name="MediaOverviewActivity_Selected_description">Izvēlētais</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="zero">%1$d vienums %2$s</item>
+    <item quantity="one">%1$d vienums%2$s</item>
+    <item quantity="other">%1$d vienumi %2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="zero">%1$d vienums</item>
+    <item quantity="one">%1$d vienums</item>
+    <item quantity="other">%1$d vienumi</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">Fails</string>
   <string name="MediaOverviewActivity_audio">Audio</string>
   <string name="MediaOverviewActivity_video">Video</string>
   <string name="MediaOverviewActivity_image">Atēls</string>
+  <string name="MediaOverviewActivity_sent_by_s">Nosūtīja %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Jūs nosūtījāt</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">%1$snosūtīja %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Jūs nosūtījāt %1$s </string>
   <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Iepazīstinām ar reakcijām</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Pieskarieties un turiet jebkuru ziņojumu, lai ātri kopīgotu savas domas.</string>
+  <string name="Megaphones_remind_me_later">Atgādināt vēlāk</string>
+  <string name="Megaphones_verify_your_signal_pin">Signal PIN verificēšana</string>
+  <string name="Megaphones_well_occasionally_ask_you_to_verify_your_pin">Dažreiz mēs jums pieprasīsim pārbaudīt jūsu PIN, lai jūs to atcerētos.</string>
+  <string name="Megaphones_verify_pin">Pārbaudīt PIN</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Notiek Signal zvans </string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zvana izveide</string>
@@ -474,6 +520,7 @@
     <item quantity="other">Jūs Nevariet dalīties ar vairāk kā %d elementus.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Izvēlēties adresātus</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Pieskarieties šeit, lai šis ziņojums pēc skatīšanas pazustu.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Visa multivide</string>
   <!--MessageRecord-->
@@ -531,6 +578,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Signal ikona</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Iesniegt paroli</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nepareiza parole</string>
+  <string name="PassphrasePromptActivity_unlock_signal">Atbloķēt Signal</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Karte</string>
   <string name="PlacePickerActivity_not_a_valid_address">Nederīga Adrese</string>
@@ -546,7 +594,9 @@
   <string name="RatingManager_later">Vēlāk</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups! šķiet, ka Jums nav instelēts Play Veikals.</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">Visi %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloķēt šo kontaktu?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Jūs vairs nesaņemsiet ziņas un zvanus no šī kontakta.</string>
@@ -606,13 +656,18 @@ tālruņa numurs</string>
   <string name="RegistrationActivity_failed_to_verify_the_captcha">Neizdevās pārbaudīt CAPTCHA</string>
   <string name="RegistrationActivity_next">Tālāk</string>
   <string name="RegistrationActivity_continue">Turpināt</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Turpināt (%d mēģinājumi atlikuši)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Turpināt (pēdējais mēģinājums)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">ņem privātumu ar sevi.\nEsi tu pats karā ziņā.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Ievadiet savu numuru, lai sāktu</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Jūs saņemsiet verificēšanas kodu. Var tikts piemērots operatora tarifus.</string>
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Ievadiet kodu, ko mēs nosūtījām %s</string>
+  <string name="RegistrationActivity_phone_number_description">Tālruņa numurs</string>
+  <string name="RegistrationActivity_country_code_description">Valsts kods</string>
   <string name="RegistrationActivity_call">Zvanīt</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_view_photo">Skatīt attēlu</string>
+  <string name="RevealableMessageView_view_video">Skatīt video</string>
   <string name="RevealableMessageView_viewed">Skatīts</string>
   <string name="RevealableMessageView_media">Multivide</string>
   <!--ScribbleActivity-->
@@ -632,6 +687,11 @@ tālruņa numurs</string>
   <string name="SharedContactView_invite_to_signal">Uzaicināt uz Signal</string>
   <string name="SharedContactView_message">Signal ziņa</string>
   <!--SignalPinReminders-->
+  <string name="SignalPinReminders_well_remind_you_again_later">Vēlāk atgādināsim vēlreiz.</string>
+  <string name="SignalPinReminders_well_remind_you_again_tomorrow">Mēs vēlreiz atgādināsim rīt.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_few_days">Mēs atgādināsim vēlreiz pēc dažām dienām.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_week">Mēs atgādināsim vēlreiz pēc nedēļas.</string>
+  <string name="SignalPinReminders_well_remind_you_again_in_a_couple_weeks">Atgādināsim vēlreiz pēc pāris nedēļām.</string>
   <!--Slide-->
   <string name="Slide_image">Atēls</string>
   <string name="Slide_sticker">Uzlīme</string>
@@ -675,6 +735,9 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="ThreadRecord_missed_call">Neatbildēts zvans</string>
   <string name="ThreadRecord_media_message">Multivides ziņa</string>
   <string name="ThreadRecord_sticker">Uzlīme</string>
+  <string name="ThreadRecord_view_once_photo">Vienreiz skatāms attēls</string>
+  <string name="ThreadRecord_view_once_video">Vienreiz skatāms video</string>
+  <string name="ThreadRecord_view_once_media">Vienreiz skatāma multivide</string>
   <string name="ThreadRecord_s_is_on_signal">%s lieto Signal</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Izgaistošās ziņas atspējotas</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">izgaistošo ziņu laiks iestādīts uz %s</string>
@@ -700,8 +763,19 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="UnverifiedSendDialog_send_message">Sūtīt ziņu?</string>
   <string name="UnverifiedSendDialog_send">Sūtīt</string>
   <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Lietotājvārds</string>
   <string name="UsernameEditFragment_submit">Iesniegt</string>
   <string name="UsernameEditFragment_delete">Dzēst</string>
+  <string name="UsernameEditFragment_successfully_set_username">Lietotājvārds ir sekmīgi iestatīts.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Lietotājvārds ir sekmīgi noņemts.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">Radās tīkla kļūda.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Šis lietotājvārds ir aizņemts.</string>
+  <string name="UsernameEditFragment_this_username_is_available">Šis lietotājvārds ir pieejams.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Lietotājvārdi var ietvert tikai-Z, 0-9 un pasvītrojuma zīmes.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Lietotājvārdi nevar sākties ar skaitli.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Lietotājvārds nav derīgs.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Lietotājvārdiem jābūt starp %1$d un %2$d rakstzīmēm.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Citi signāla lietotāji var nosūtīt ziņu pieprasījumus jūsu unikālajam lietotājvārdam, nezinot jūsu tālruņa numuru. Lietotājvārda izvēle nav obligāta.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Jūsu kontaktpersona izmanto vecu Signal versiju. Lūdzu palūdziet, lai atjauno, pirms apstipriniet drošības numuru.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Jūsu kontaktpersona izmanto jaunāku Signal versiju, ar nesaderīgu QR koda formātu. Lūdzu atjaunojiet, lai salīdzinātu.</string>
@@ -741,6 +815,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Nespēj saglabāt ārējā krātuvē bez atļaujas.</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Izdzēst ziņu?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Šis neatgriezeniski izdzēsīs ziņu.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d jaunas ziņas %2$dsarunās</string>
   <string name="MessageNotifier_most_recent_from_s">Pēdējā no: %1$s</string>
@@ -753,6 +828,8 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="MessageNotifier_mark_read">Atzīmēt lasītu</string>
   <string name="MessageNotifier_media_message">Multivides ziņa</string>
   <string name="MessageNotifier_sticker">Uzlīme</string>
+  <string name="MessageNotifier_view_once_photo">Vienreiz skatāms attēls</string>
+  <string name="MessageNotifier_view_once_video">Vienreiz skatāms video</string>
   <string name="MessageNotifier_reply">Abildēt</string>
   <string name="MessageNotifier_signal_message">Signal ziņa</string>
   <string name="MessageNotifier_unsecured_sms">Nedroš SMS</string>
@@ -771,6 +848,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="NotificationChannel_group_messages">Ziņas</string>
   <string name="NotificationChannel_missing_display_name">Nezināms</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_encountered_a_network_error">Radās tīkla kļūda.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Atrās atbildes nav pieejamas, kad Signal ir bloķēts!</string>
   <string name="QuickResponseService_problem_sending_message">Problēma sūtot ziņu!</string>
@@ -892,6 +970,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Attēls</string>
+  <string name="QuoteView_view_once_media">Vienreiz skatāma multivide</string>
   <string name="QuoteView_sticker">Uzlīme</string>
   <string name="QuoteView_document">Dokuments </string>
   <string name="QuoteView_you">Jūs</string>
@@ -1018,6 +1097,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Lai nosūtītu multivides un grupas ziņas, spiediet \'OK\' un izpildiet pieprasītos uzstādījumus. Jūsu mobilo sakaru operatora MMS iestatījumus parasti var atrast, meklējot “jūsu pakalpojumu sniedzēja APN”. Jums tas būs jādara tikai vienreiz.</string>
   <!--profile_create_activity-->
   <string name="CreateProfileActivity_next">Tālāk</string>
+  <string name="CreateProfileActivity__username">Lietotājvārds</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Koplietota multivide</string>
   <!--recipient_preferences-->
