--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1528,7 +1528,7 @@
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Alterar</string>
   <string name="preferences_app_protection__create">Criar</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Seu PIN adiciona uma camada extra de segurança e recupera sua conta. Ele será solicitado no momento em que você registrar seu número de telefone no Signal. Se você esquecer seu PIN, sua conta ficará bloqueada por 7 dias.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Seu PIN adiciona uma camada extra de segurança e recupera sua conta. Ele será solicitado no momento em que você registrar seu número de telefone no Signal. Se você esquecer seu PIN, sua conta ficará bloqueada por 7 dias.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Nenhuma</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">O PIN de Desbloqueio de Cadastro não é igual ao código de verificação que você acabou de receber. Por favor, insira o PIN definido anteriormente por meio do aplicativo.</string>
   <string name="registration_activity__registration_lock_pin">PIN de Desbloqueio de Cadastro</string>
