--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -1591,7 +1591,7 @@ spastrohet dhe krejt lënda do të fshihet.</item>
   <string name="preferences_app_protection__pin">PIN</string>
   <string name="preferences_app_protection__change">Ndryshojeni</string>
   <string name="preferences_app_protection__create">Krijoni</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN-i juaj i shton llogarisë tuaj një shtresë ekstra sigurie dhe ndihmon në kopjeruajtjen e llogarisë tuaj. Do t’ju kërkohet një i tillë kur regjistroni numrin e telefonit tuaj me Signal-in. Nëse harroni PIN-in tuaj, do të kyçeni jashtë llogarisë tuaj për 7 ditë.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">PIN-i juaj i shton llogarisë tuaj një shtresë ekstra sigurie dhe ndihmon në kopjeruajtjen e llogarisë tuaj. Do t’ju kërkohet një i tillë kur regjistroni numrin e telefonit tuaj me Signal-in. Nëse harroni PIN-in tuaj, do të kyçeni jashtë llogarisë tuaj për 7 ditë.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Asnjë</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">PIN-i i Kyçjes së Regjistrimit s\’është i njëjtë me kodin e verifikimit SMS që sapo morët. Ju lutemi, jepni PIN-in që formësuat më herët te aplikacioni.</string>
   <string name="registration_activity__registration_lock_pin">PIN Kyçjeje Regjistrimi</string>
