--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1558,7 +1558,7 @@
   <string name="preferences_app_protection__pin">பின்</string>
   <string name="preferences_app_protection__change">மாற்றம்</string>
   <string name="preferences_app_protection__create">உருவாக்கவும்</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">உங்கள் பின் கூடுதல் பாதுகாப்பு அடுக்கைச் சேர்த்து உங்கள் கணக்கில் காப்புப் பிரதி எடுக்கிறது. உங்கள் தொலைபேசி எண்ணை Signal. பதிவுசெய்யும்போது உங்களிடம் கேட்கப்படும். உங்கள் பின்னை மறந்துவிட்டால், உங்கள் கணக்கில் 7 நாட்கள் பூட்டப்படுவீர்கள்.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">உங்கள் பின் கூடுதல் பாதுகாப்பு அடுக்கைச் சேர்த்து உங்கள் கணக்கில் காப்புப் பிரதி எடுக்கிறது. உங்கள் தொலைபேசி எண்ணை Signal. பதிவுசெய்யும்போது உங்களிடம் கேட்கப்படும். உங்கள் பின்னை மறந்துவிட்டால், உங்கள் கணக்கில் 7 நாட்கள் பூட்டப்படுவீர்கள்.</string> -->
   <string name="AppProtectionPreferenceFragment_none">எதுவும் இல்லை</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">பதிவு பூட்டு பின் நீங்கள் பெற்ற எஸ்எம்எஸ் சரிபார்ப்புக் குறியீட்டைப் போன்றது அல்ல. பயன்பாட்டில் நீங்கள் முன்பு கட்டமைத்த பின்னை உள்ளிடவும்.</string>
   <string name="registration_activity__registration_lock_pin">பதிவு பூட்டு பின்</string>
