--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1528,7 +1528,7 @@
   <string name="preferences_app_protection__pin">పిన్</string>
   <string name="preferences_app_protection__change">మార్పు</string>
   <string name="preferences_app_protection__create">సృష్టించు</string>
-  <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">మీ పిన్ అదనపు భద్రతా పొరను జోడిస్తుంది మరియు మీ ఖాతాను బ్యాకప్ చేస్తుంది. మీరు మీ ఫోన్ నంబర్‌ను Signal తో నమోదు చేసినప్పుడు మీరు అడుగుతారు. మీరు మీ పిన్‌ను మరచిపోతే, మీరు మీ ఖాతా నుండి 7 రోజులు లాక్ అవుతారు.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">మీ పిన్ అదనపు భద్రతా పొరను జోడిస్తుంది మరియు మీ ఖాతాను బ్యాకప్ చేస్తుంది. మీరు మీ ఫోన్ నంబర్‌ను Signal తో నమోదు చేసినప్పుడు మీరు అడుగుతారు. మీరు మీ పిన్‌ను మరచిపోతే, మీరు మీ ఖాతా నుండి 7 రోజులు లాక్ అవుతారు.</string> -->
   <string name="AppProtectionPreferenceFragment_none">ఏదీ కాదు</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">మీరు అందుకున్న SMS ధృవీకరణ కోడ్ వలె నమోదు లాక్ పిన్ అదే కాదు. దయచేసి మీరు మునుపు అనువర్తనం లో కాన్ఫిగర్ చేసిన పిన్ ను నమోదు చేయండి.</string>
   <string name="registration_activity__registration_lock_pin">నమోదు లాక్ పిన్</string>
